--- a/no03_dashbordtemplate/index.html
+++ b/no03_dashbordtemplate/index.html
@@ -76,6 +76,75 @@
         </ul>
       </div>
     </div>
+
+    <div class="main">
+      <div class="contents">
+        <div class="bd-example">
+          <form>
+            <div class="mb-3">
+              <label for="exampleInputName" class="form-label">Name</label>
+              <input type="text" class="form-control" id="exampleInputName" />
+            </div>
+            <div class="mb-3">
+              <label for="disabledTextInput" class="form-label"
+                >Disabled input</label
+              >
+              <input
+                type="text"
+                id="disabledTextInput"
+                class="form-control"
+                placeholder="Disabled input"
+                readonly
+              />
+            </div>
+            <div class="mb-3">
+              <label for="disabledSelect" class="form-label"
+                >Disabled select menu</label
+              >
+              <select id="disabledSelect" class="form-select" readonly>
+                <option>Disabled select</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label"
+                >Email address</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
+              <div id="emailHelp" class="form-text">
+                We'll never share your email with anyone else.
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label"
+                >Password</label
+              >
+              <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+              />
+            </div>
+            <div class="mb-3 form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+              <label class="form-check-label" for="exampleCheck1"
+                >Check me out</label
+              >
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
