--- a/no03_dashbordtemplate/index.html
+++ b/no03_dashbordtemplate/index.html
@@ -80,6 +80,64 @@
     <div class="main">
       <div class="contents">
         <div class="bd-example">
+          <div
+            class="btn-group"
+            role="group"
+            aria-label="Basic checkbox toggle button group"
+          >
+            <input
+              type="checkbox"
+              class="btn-check"
+              id="btncheck1"
+              autocomplete="off"
+            />
+            <label class="btn btn-outline-primary" for="btncheck1"
+              >Step 1</label
+            >
+
+            <input
+              type="checkbox"
+              class="btn-check"
+              id="btncheck2"
+              autocomplete="off"
+              checked
+            />
+            <label class="btn btn-outline-primary" for="btncheck2"
+              >Step 2</label
+            >
+
+            <input
+              type="checkbox"
+              class="btn-check"
+              id="btncheck3"
+              autocomplete="off"
+            />
+            <label class="btn btn-outline-primary" for="btncheck3"
+              >Step 3</label
+            >
+
+            <input
+              type="checkbox"
+              class="btn-check"
+              id="btncheck4"
+              autocomplete="off"
+            />
+            <label class="btn btn-outline-primary" for="btncheck3"
+              >Step 4</label
+            >
+
+            <input
+              type="checkbox"
+              class="btn-check"
+              id="btncheck5"
+              autocomplete="off"
+            />
+            <label class="btn btn-outline-primary" for="btncheck3"
+              >Step 5</label
+            >
+          </div>
+        </div>
+        <div class="bd-example">
           <form>
             <div class="mb-3">
               <label for="exampleInputName" class="form-label">Name</label>
@@ -96,6 +154,16 @@
                 placeholder="Disabled input"
                 readonly
               />
+            </div>
+            <div class="mb-3">
+              <label for="disabledSelect" class="form-label"
+                >Disabled select menu</label
+              >
+              <select id="disabledSelect" class="form-select">
+                <option>0</option>
+                <option>1</option>
+                <option>2</option>
+              </select>
             </div>
             <div class="mb-3">
               <label for="disabledSelect" class="form-label"
