--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             Simple Dashboard Template Design</a
           >
         </li>
+        <li>
+          <a href="./no04_step/index.html"
+            >HTML, CSS 및 JavaScript를 사용하는 진행률 표시줄이 있는 다단계
+            양식</a
+          >
+        </li>
       </ul>
     </div>
   </body>
