--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
             양식</a
           >
         </li>
+        <li>
+          <a href="./no05_responsive_grid/index.html"
+            >Responsive CSS Grid Tutorial</a
+          >
+        </li>
+        <li>
+          <a href="./no06_responsive_dashboard/index.html"
+            >Create Responsive Admin Dashboard in HTML CSS | Admin Panel
+            Template</a
+          >
+        </li>
       </ul>
     </div>
   </body>
