--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             Template</a
           >
         </li>
+        <li>
+          <a href="./no08_portfolio_website_tutorial/index.html"
+            >Portfolio Website Tutorial – Frontend Development with HTML, CSS,
+            JavaScript</a
+          >
+        </li>
       </ul>
     </div>
   </body>
